# custom-scheduler-v2

./: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  devlog.md  pyproject.toml  requirements-test.txt  requirements.txt
k8s/: rbac.yaml  scaffolding.yaml  scheduler.yaml
k8s/sample/: test_pod_high_priority_alt_scheduler.yaml  test_pod_low_priority.yaml
k8s/test/: job-two-highpri.yaml  job-two-lowpri.yaml  pod-highpri.yaml  scaffolding.yaml
src/: lib.py  main.py
src/custom_scheduler/: __init__.py  api_components.py  core.py  core_k8s.py  driver.py  k8s.py  lib.py  main.py
tests/: test_core.py  test_lib.py  test_main.py
