[project]
name = "custom-scheduler"
version = "0.1.0"
description = "A custom scheduler project"
requires-python = ">=3.9"
dependencies = [
    "kubernetes>=29.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 