[project]
name = "custom-scheduler"
version = "0.1.0"
description = "A custom scheduler project"
requires-python = ">=3.9"
dependencies = [
    "kubernetes>=29.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_scheduler"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
python_files = "*.py"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: Unit tests.",
    "system: System (browser-based) tests."
]

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
